# interview-inco

./: README.md  case_inco.md  pyproject.toml
interview_inco/: __init__.py  config.py  contorl.py  db.py  schema.sql
interview_inco/templates/: index.html
tests/: test_control.py
