[tool.poetry]
name = "interview-inco"
version = "0.1.0"
description = ""
authors = ["Zijun Yu <zijun.yu.joey@gmail.com>"]
readme = "README.md"
packages = [{include = "interview_inco"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
